# Pseudocode_Editor

./: .gitignore
backend/: package-lock.json  package.json
backend/src/: localRunner.js  server.js
compiler/: CMakeLists.txt
compiler/include/: ast.h  ir_generator.h  ir_interpreter.h  ir_optimizer.h  lexer.h  parser.h  semantic_analyzer.h  token.h
compiler/src/: ir_generator.cpp  ir_interpreter.cpp  ir_optimizer.cpp  lexer.cpp  main.cpp  parser.cpp  semantic_analyzer.cpp
compiler/tests/: ast.txt  input.txt  ir_generated.txt  tokens.txt
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: Editor.jsx
frontend/pages/: _app.tsx  index.jsx
